# Research

./: Dockerfile  README.md  ReadMe.txt  setup.py
code/: .cproject  CMakeLists.txt  build.sh  optimize.cpp
code/src/: Mesh.cpp  Mesh.h  MeshFileReader.cpp  MeshFileReader.h  MeshFileWriter.cpp  MeshFileWriter.h  Solver.cpp  Solver.h
examples/: output.vtk
examples/2d/: mazewheel1_input.vtk  mazewheel3_input.vtk  simplified_patch0_2D.vtk  simplified_patch1_2D.vtk  simplified_patch2_2D.vtk  simplified_patch3_2D.vtk  simplified_patch4_2D.vtk  simplified_patch5_2D.vtk  simplified_patch6_2D.vtk
examples/table1/KingKong/: run.sh
examples/table1/armadillo/: input.vtk  result.vtk  run.sh
examples/table1/block/: input.vtk  result.vtk  run.sh
examples/table1/bunny/: LocalMeshOpt.sh  input.vtk  result.vtk  run.sh
examples/table1/bust/: input.vtk  result_figure1.vtk  result_table1.vtk  run_figure1.sh  run_table1.sh
examples/table1/cap/: input.vtk  result.vtk  run.sh
examples/table1/dancingchildren/: input.vtk  result.vtk  run.sh
examples/table1/hanger/: input.vtk  result.vtk  run.sh
examples/table1/impeller/: input.vtk  result.vtk  run.sh
examples/table2/fertility/: input.vtk  output.vtk  result.vtk
examples/table2/rockerarm/: LocalMeshOpt.sh  output.vtk  result.vtk
examples/table3/airplane1_octree/: input.vtk  result.vtk
examples/table3/fandisk/: input.vtk  result.vtk  run.sh
examples/table3/kitty/: input.vtk  result.vtk
examples/table4/: LocalMeshOpt.sh
examples/table4/airplane1/: input.vtk  output.vtk  ref.tet.vtk  result.vtk
examples/table4/bird/: input.vtk  ref.tet.vtk  result.vtk
examples/table4/blade/: input.vtk  ref.tet.vtk  result.vtk
examples/table4/bottle1/: LocalMeshOpt.sh  input.vtk  output.vtk  ref.tet.vtk  result.vtk  (+1 more)
examples/table5/: readme.txt
(+39 files in other folders)
